# opportunity-scrapper

./: .env.example  .gitignore  DEBUG.md  Makefile  PHASE1_DONE.md  PHASE4_DONE.md  PHASE5_DONE.md  PLAN.md  README.md  SETUP_EXTERNAL.md  TESTING.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 295029dc644f_initial_schema.py  349bca546cc4_add_submissions_table.py
config/: job_criteria.yml
data/proposal_examples/: api-security-gateway.md  iam-sso-keycloak.md  java-backend-banque.md
data/proposal_examples/en/: iam-sso-keycloak-en.md  java-angular-python-en.md
data/proposal_examples/fr/: iam-sso-keycloak-fr.md  java-angular-python-fr.md
documentation/: CLAUDE.md  OVERVIEW.md  PHASE2_DONE.md  PHASE3_DONE.md  PHASE6_DONE.md  PHASE7_DONE.md  Prompt Design architecture for AI Bot Scrapper 7594180ac282826fb1660190eb0dfd6e.md  README.md  TECHNICAL_FLOW.md
openclaw/: main.py  monitor.py
openclaw/api/routes/: __init__.py  health.py  qualification.py
openclaw/bot/: __init__.py  handlers.py  main.py  sender.py
openclaw/core/: config.py
openclaw/db/: repository.py  session.py
openclaw/models/: domain.py  storage.py
openclaw/scrapers/: base.py  freework.py  freework_submitter.py  lehibou.py  registry.py
openclaw/services/: filtering.py  proposal_generator.py  proposal_memory.py  resume_selector.py  telegram.py
openclaw/workflows/: qualification.py
ops/systemd/: openclaw-api.service
scripts/: check_env.py  seed_examples.py  send_test_alert.py
tests/: test_config.py  test_filtering.py  test_freework_scraper.py
